[package]
name        = "helios-contracts"
version     = "0.1.0"
edition     = "2021"

[lib]
name    = "helios_contracts"
crate-type = ["cdylib"]

[dependencies]
casper-contract = { version = "4", default-features = false }
casper-types    = { version = "4", default-features = false }
wee_alloc       = "0.4"

[features]
default = []
oracle-registry = []
data-market = []
fund-vault = []
governance = []

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "z"
panic         = "abort"
